# solbox-slack-dashboard

./: .gitignore  package.json
.github/workflows/: build.yml
src/: app.js  body.html  index.html  manifest.json  multi_window.js  self_test.js  style.html  sw.js  tauri_diag.js
src-tauri/: Cargo.toml  dev-server.cjs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
