[package]
name = "slack-dashboard"
version = "1.0.0"
description = "솔박스 직원용 경량 Slack 대시보드"
authors = ["Solbox"]
edition = "2021"

[lib]
name = "slack_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"
urlencoding = "2"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
open = "5"

[profile.release]
opt-level = "s"     # 크기 최적화
lto = true
codegen-units = 1
strip = true
panic = "abort"
